--- a/_config.yml
+++ b/_config.yml
@@ -76,13 +76,7 @@ defaults:
       layout: "git-wiki-default"
  -
     scope:
-      path: assets/blog
-      type: "blog"
-    values:
-      layout: "git-wiki-blog"
- -
-    scope:
-      path: "/"
+      path: ""
       type: "pages"
     values:
       layout: "git-wiki-default"
@@ -92,7 +86,11 @@ defaults:
       type: "posts"
     values:
       layout: "git-wiki-post"
-
+ -
+    scope:
+      path: assets/blog
+    values:
+      layout: "git-wiki-blog"
 sass:
     style: compressed
 plugins:
