--- a/_config.yml
+++ b/_config.yml
@@ -64,34 +64,34 @@ kramdown:
   syntax_highlighter: rouge
 
 defaults:
-# -
-#    scope:
-#      path: "wiki"
-#    values:
-#      permalink: /:basename
-# -
-#    scope:
-#      path: "" # an empty string here means all files in the project
-#    values:
-#      layout: "git-wiki-default"
  -
     scope:
       path: "wiki"
+    values:
+      permalink: /:basename
+ -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "git-wiki-default"
+ -
+    scope:
+      path: ""
       type: "pages"
     values:
       layout: "git-wiki-default"
  -
     scope:
-      path: "_posts"
+      path: ""
       type: "posts"
     values:
       layout: "git-wiki-post"
  -
     scope:
-      path: "assets/blog"
-      type: "blog"
+      path: assets/blog
     values:
       layout: "git-wiki-blog"
+
 sass:
     style: compressed
 plugins:
