--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,8 @@ search_engine : "js"
 google_cse_token: 
 
 # (string) path of site root. Normally it's must be empty because _config.yml resides in the root of your repository.
-# If you have _config.yml and your site in a subfolder, then change this config accordly 
+# If you have _config.yml and your site in a subfolder, then change this config accordly
+permalink: /blog/posts/:year/:month/:day/:title:output_ext
 site_root: 
 
 #
